@@ -1,4 +1,6 @@
 ===v8.1.2===
+* Restored the old Buff/Debuff duration percentage conditions, since they still have applications for variable-duration effects like Rogue DoTs.
+
 ====Bug Fixes====
 * Attempted a permanant fix to very rare and very old bug where some users' includes.*.xml files were getting scrambled around in their TMW install, leading to the problem of most of the addon not getting loaded.
 * Fixed an issue with Condition-triggered animations not working consistently in controlled groups.
